Workaround for Juju bug 1860992
Change CMR offer names to match application names to workaround
Juju bug 1860992.

Change-Id: Ia3019c9d8b905b80d5a44691607bb8a9ea20fe9d

--- a/tests/bundles/overlays/bionic-train-gr-r2.yaml.j2
+++ b/tests/bundles/overlays/bionic-train-gr-r2.yaml.j2
@@ -24,12 +24,12 @@ relations:
   - swift-proxy-region1:rings-distributor
 saas:
   keystone:
-    url: admin/{{ swift_gr_region1 }}.keystone-offer
+    url: admin/{{ swift_gr_region1 }}.keystone
   swift-proxy-region1:
-    url: admin/{{ swift_gr_region1 }}.swift-proxy-region1-offer
+    url: admin/{{ swift_gr_region1 }}.swift-proxy-region1
   swift-storage-region1-zone1:
-    url: admin/{{ swift_gr_region1 }}.swift-storage-region1-zone1-offer
+    url: admin/{{ swift_gr_region1 }}.swift-storage-region1-zone1
   swift-storage-region1-zone2:
-    url: admin/{{ swift_gr_region1 }}.swift-storage-region1-zone2-offer
+    url: admin/{{ swift_gr_region1 }}.swift-storage-region1-zone2
   swift-storage-region1-zone3:
-    url: admin/{{ swift_gr_region1 }}.swift-storage-region1-zone3-offer
+    url: admin/{{ swift_gr_region1 }}.swift-storage-region1-zone3
